# lastro

./: .gitignore  CLAUDE.md  README.md  docker-compose.yml  justfile  render.yaml
backend/: .dockerignore  .env.example  Dockerfile  entrypoint.sh  pyproject.toml  verify2.txt
backend/alembic/: env.py
backend/alembic/versions/: 0ddf8900dfec_add_sale_and_price_history_tables.py  1b2efd06ac8f_seed_real_portfolio_positions.py  3be158bb8731_add_price_earnings_and_earnings_per_.py  43158ad829b6_adiciona_model_de_usuario_para_.py  4d6fde8d3582_create_card_merchantrule_transaction_tables.py  69b35846310d_add_categorized_by_to_transaction.py  72bd333aaac6_create_income_fixed_expense_variable_.py  7fe01dca9671_add_allocation_target_table.py  a1f3c9d8e6b2_seed_merchant_rules_from_spreadsheet.py  a62cc0368dd7_add_due_day_and_seed_billing_cycle_days.py  abc3e65975f9_add_target_yield_pct_to_position.py  af4c484405d1_add_stock_split_table.py  c2c96137ef72_create_category_table.py  d5be9e9e731e_seed_initial_cards.py  dc1cdf23f373_create_position_contribution_dividend_snapshot_reserve_tables.py  ecc06d759109_add_is_paid_to_expenses_and_card_.py  f08d29c3fa84_add_roe_percentage_to_position.py  fcc537a6f02d_adiciona_conversation_message_e_analyst_.py
backend/scripts/: seed_demo.py
backend/src/lastro/: db.py  main.py
backend/tests/: conftest.py  test_admin.py  test_health.py
backend/tests/api/: test_allocation_targets.py  test_analyst.py  test_auth.py  test_cards.py  test_categories.py  test_categorization_stats.py  test_contributions.py  test_dashboard.py  test_dividends.py  (+15 more)
(+221 files in other folders)
